--- a/cypress/.github/workflows/cypress-test.yml
+++ b/cypress/.github/workflows/cypress-test.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ⬇️ Checkout code
+      - name: ⬇️ Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🔧 Setup Node.js
+      - name: 🔧 Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
@@ -22,17 +22,17 @@ jobs:
       - name: 📦 Install dependencies
         run: npm ci
 
-      - name: ▶️ Run Cypress Tests
+      - name: 🧪 Run Cypress tests
         run: npx cypress run
 
-      - name: 📤 Upload Cypress Screenshots (on failure)
+      - name: 📤 Upload screenshots on failure
         if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: cypress-screenshots
           path: cypress/screenshots
 
-      - name: 📤 Upload Cypress Videos
+      - name: 📤 Upload videos
         if: always()
         uses: actions/upload-artifact@v4
         with:
